CHANGES in VERSION 1.13.2

* add `packLegend()`

========================

CHANGES in VERSION 1.13.1

* `Heatmap()`: add `km_title` to set the format of row title when `km` is set
* `anno_link()`: add `extend` to extend the regions for the labels
* `anno_boxplot()`: for row annotation, outliers are in the correct in y-axis.
  Thanks @gtg602c for the fix
* `HeatmapAnnotation()`: gaps are included in the size of the annotations
* `anno_link()`: graphic parameters are correctly reordered
* `densityHeatmap()`: viewport is created with `clip = TRUE`
* `decorate_*()`: add `envir` option to control where to look for variables inside `code`
* `Legend()`: title supports expression
* `anno_*()`: if the input is a data frame, warn that users may convert it to matrix

========================

CHANGES in VERSION 1.11.8

* `anno_barplot()`: accept a matrix as input to plot stacked barplots

=========================

CHANGES in VERSION 1.11.7

* SingleAnnotation: if `col` is a vector with no names, it will be assigned
  as `level(value)` or `unique(value)`
* HeatmapAnnotation: give warnings if color is defined while with no annotations
* HeatmapAnnotation: check `col`, if it is not valid, give warnings
* catch error when making annotation graphics

==========================

CHANGES in VERSION 1.11.6

* simply bump the verison number
* `gap` in `Heatmap()` now can be a vector

===========================

CHANGES in VERSION 1.11.5

* `gap` in `HeatmapAnnotation` has been adjusted
* annotations support drawing names of either sides
* `densityHeatmap()`: quantile lines are also reordered
* export `anno_oncoprint_barplot`
* `Heatmap()`: if `col` is a unnamed vector and the number of colors is same as
  unique itemes in `mat`, the name of `col` vector is set to `sort(unique(mat))
* adjusted the order of annotation legends
* discreat legend: if a level is not in the data while defined by `col`, it will
  be removed.

=============================

CHANGES in VERSION 1.11.2
